# TTLR-Final-Challenge

./: .dockerignore  .env.template  .gitignore  AGENTS.md  DEVDIARY.md  Dockerfile  PROBLEMSTATEMENT.md  README.md  alembic.ini  compose.yaml  dev-compose.yaml  docker-compose.yaml  main.py  pyproject.toml  start.sh
app/: __init__.py  agent.py  config.py  data_loader.py  db.py  ingestion.py  logging.py  main.py  memory.py  models.py  protocol.py  server.py
app/agent/: __init__.py  agent.py  assistant.py  context.py  dependencies.py  factory.py  logging.py  models.py  multi_turn.py  prompt.py  prompts.py  retrieval.py  router.py  runtime.py  scenarios.py  schemas.py  tools.py
app/agent/image/: __init__.py  factory.py  prompts.py
app/agent/multi_turn/: __init__.py  agents.py  coordinator.py  extractor.py  (+9 more)
app/api/: models.py  routes.py
app/conversation/: __init__.py  state.py
app/logging_utils/: __init__.py  judge_requests.py
app/migrations/: env.py
app/models/: chat.py
app/scripts/: prepare_database.py
app/services/: feature_utils.py  preprocess.py  replay.py  scenario_zero.py
scripts/: download_data.py  embed_products.py  ingest.py  replay.py  replay_chat.py  setup_database.sh
tests/: test_chat_endpoint.py  test_download_logs_endpoint.py  test_feature_lookup.py  test_multi_turn_tools.py  test_multiturn_nlu.py  test_multiturn_orchestrator.py  test_multiturn_policy.py  test_multiturn_prompt.py  test_multiturn_search.py  test_multiturn_tools.py  test_product_search_concurrency.py  test_protocol.py  test_request_logging.py  test_scenario4_coordinator.py
(+29 files in other folders)
