[project]
name = "ttlr-final-challenge"
version = "0.1.0"
description = "Shopping assistant prototype built around LlamaIndex"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.28",
    "llama-index>=0.10.60",
    "llama-index-vector-stores-postgres>=0.1.3",
    "arize-phoenix>=3.17.0",
    "adbc-driver-postgresql>=1.1",
    "polars>=0.20",
    "psycopg[binary,pool]>=3.1",
    "gdown>=5.2.0",
    "openai>=1.40",
]
