[project]
name = "ttlra"
version = "0.1.0"
description = "TTLR shopping assistant service"
authors = []
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.0",
    "uvicorn==0.32.1",
    "pydantic-ai==1.0.9",
    "asyncpg==0.30.0",
    "pandas==2.2.3",
    "pyarrow==17.0.0",
    "gdown==5.2.0",
    "httpx==0.28.1",
    "python-dotenv==1.0.1",
    "pytest==8.3.3"
]

[tool.uv]
managed = true
